--- a/app/views/welcome_page/welcome.html.erb
+++ b/app/views/welcome_page/welcome.html.erb
@@ -1,2 +1,19 @@
-<h1>Welcome!</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>HelloWorld</title>
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+  </head>
+
+  <body>
+    <%= yield %>
+    <h1>Welcome!</h1>
 <p>This is the front page of my first Rails application on Elastic Beanstalk.</p>
+  </body>
+</html>
+
+
