--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,84 @@
-<h1>Hello, Rails!</h1>
+<header>
+		<div class="container">
+			<div id="branding">
+				<h1>
+					<span class="highlight">Rails</span> Simple Landing
+				</h1>
+			</div>
+			<nav>
+				<ul>
+						<a href="index.html">
+							Home
+						</a>
+					</li>
+					<li>
+						<a href="about.html">
+							About
+						</a>
+					</li>
+					<li>
+						<a href="services.html">
+							Services
+						</a>
+					</li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+	<section id="showcase"> 
+		<div class="container">
+			<h1>
+				Welcome to simple landing page
+			</h1>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</div>
+	</section>
+	<section id="newsletter">
+		<div class="container">
+			<h1>
+				Subscribe to random newslatter
+			</h1>
+			<form>
+				<input type="email" name="email" placeholder="Enter Email...">
+				<button type="submit" class="button_1">Subscribe</button>
+			</form>
+		</div>
+	</section>
+	<section id="boxes">
+		<div class="container">
+			<div class="box">
+				<img src="./img/logo_html.png">
+				<h3>
+					HTML5 Markup
+				</h3>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+				</p>
+			</div>
+			<div class="box">
+				<img src="./img/logo_css.png">
+				<h3>
+					CSS3 Styling
+				</h3>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+				</p>
+			</div>
+			<div class="box">
+				<img src="./img/logo_js.png">
+				<h3>
+					Java Script code
+				</h3>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+				</p>
+			</div>
+		</div>
+	</section>
+	<footer>
+		<p>
+			Created by <a href="https://github.com/Makishimu" target="_blanc">Makisimu</a> &copy; 2017
+		</p>
+	</footer>
